  This does not manifest in some machines.
- Fixed lack of null termination in self knowledge and *identification*.
- Fixed the "psi-powers" bug with rods.
- Fixed wand bug which could reduce the pval of other items.
- tot_dam_aux_player was getting resistances the wrong way round (and redefining
  arg p_ptr).
- uncommented 744/745 of server/xtra1.c
- made king code multi-king friendly (made movement hook for each player)

25/07/2001 (evileye)
- Fixed up target_set_friendly so that it works with non party players
  and respects hostilities.
- Fixed "the (nothing) you are wearing is cursed" problem which annoys
  recently deceased players.
- Blood bond should not crash now.
- Added curse item spell for rogues (not fully implemented).
- Cleaned up various code and added protos for some funcs

25/07/2001 (darkgod)
- Fury, Dig, Spin warrior technics
- Fixed DSM being dopepd without unpolying
- Fixed morphing and not lossing eq wit eq is inscribed !
- /me works in chat

26/07/2001 (evileye)
- Fixed password prompt in client
- Bug in netserver which could result in bus fault fixed.
- Added Player menu to wizard commands (framework mainly)
- Added wizard level genocide

27/07/2001 (evileye)
- Fixed double experience bug on priests and sorcerors.

28/07/2001 (darkgod)
- Ghost cant gain experience
- Diving as a ghost dont affect recall depth

28/07/2001 (evileye)
- Cloned monsters do not drop anymore, and yield no experience
  Mimic count is no longer updated either.

30/07/2007
- Telepaths dont share hp anymore, it was:
  1) silyl given the idea of only the spirit of the telepath moving
  2) cheezy
- Telepaths only share half their mana
- Player levels now goes up to 100
- Monster can ain levels up to 500

02/08/2001
- Randarts rarer
- Randart power reduced
- Max 2 EA on randarts
- Max +7 mana on randarts
- Tidal Wave mana/level increased
- Healing in hellish mode is now only 3/4 instead of 1/2
- Player Golems! One can find pieces of golem and make a powerfull ally